<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>au.gov.border.capm</groupId>
	<artifactId>autotest-skeleton</artifactId>
	<version>1.0-SNAPSHOT</version>
	<packaging>jar</packaging>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>1.8</java.version>
		<autotest.version>1.1.21</autotest.version>
		<alm.lib.version>1.0.011</alm.lib.version>
		<serenity.version>1.9.9</serenity.version>
		<serenity.maven.version>1.9.9</serenity.maven.version>
		<serenity.cucumber.version>1.9.5</serenity.cucumber.version>
		<serenity.junit.version>1.9.9</serenity.junit.version>
		<junit.version>4.12</junit.version>
		<webdriver.driver>chrome</webdriver.driver>
		<webdriver.base.url>http://javawiki:8080/display/SDLC/Our+Applications</webdriver.base.url>
		<system.under.test>wcomp</system.under.test>
		<environment>E6</environment>
		<parallel.tests>1</parallel.tests>
		<alm.reporting>false</alm.reporting>
	</properties>
	<dependencies>
		<!--<dependency>-->
		<!--<groupId>au.gov.border.capm</groupId>-->
		<!--<artifactId>autotest-framework</artifactId>-->
		<!--<version>${autotest.version}</version>-->
		<!--</dependency>-->
		<!--<dependency>-->
		<!--<groupId>au.gov.border.capm</groupId>-->
		<!--<artifactId>autotest-alm-lib</artifactId>-->
		<!--<version>${alm.lib.version}</version>-->
		<!--</dependency>-->
		<dependency>
			<groupId>com.github.tamnguyenbbt</groupId>
			<artifactId>dom-util</artifactId>
			<version>1.1.3</version>
		</dependency>
		<dependency>

			<groupId>com.neotys.lab.selenium</groupId>
			<artifactId>neotys-selenium-proxy</artifactId>
			<version>2.1.2-SNAPSHOT</version>


		</dependency>
		<dependency>
			<groupId>net.serenity-bdd</groupId>
			<artifactId>serenity-cucumber</artifactId>
			<version>${serenity.cucumber.version}</version>
		</dependency>
		<dependency>
			<groupId>net.serenity-bdd</groupId>
			<artifactId>serenity-junit</artifactId>
			<version>${serenity.junit.version}</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>5.1.6</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.9.1</version>
		</dependency>
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20160810</version>
		</dependency>
	</dependencies>
	<build>
		<defaultGoal>validate</defaultGoal>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>2.5</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<encoding>${project.build.sourceEncoding}</encoding>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<testSource>${java.version}</testSource>
					<testTarget>${java.version}</testTarget>
					<showDeprecation>true</showDeprecation>
					<showWarnings>true</showWarnings>
					<fork>true</fork>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.20</version>
				<configuration>
					<skip>true</skip>
				</configuration>
			</plugin>
			<plugin>
				<groupId>net.serenity-bdd.maven.plugins</groupId>
				<artifactId>serenity-maven-plugin</artifactId>
				<version>${serenity.maven.version}</version>
				<dependencies>
					<dependency>
						<groupId>net.serenity-bdd</groupId>
						<artifactId>serenity-core</artifactId>
						<version>${serenity.version}</version>
					</dependency>
				</dependencies>
				<executions>
					<execution>
						<id>serenity-reports</id>
						<phase>post-integration-test</phase>
						<goals>
							<goal>aggregate</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.18</version>
				<configuration>
					<includes>
						<!-- this will allow us run tests from package during test running -->
						<!--<include>au/gov/border/oa/runcucumber/</include>-->
						<!--<include>au/gov/border/oa/runjunit/features/</include>-->
					</includes>
					<systemProperties>
						<!-- you can pass as parameter webdriver type via Jenkins or TeamCity -->
						<webdriver.driver>${webdriver.driver}</webdriver.driver>
						<webdriver.base.url>${webdriver.base.url}</webdriver.base.url>
						<system.under.test>${system.under.test}</system.under.test>
						<environment>${environment}</environment>
						<alm.reporting>${alm.reporting}</alm.reporting>
					</systemProperties>
					<forkCount>${parallel.tests}</forkCount>
					<reuseForks>false</reuseForks>
					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>com.github.temyers</groupId>
				<artifactId>cucumber-jvm-parallel-plugin</artifactId>
				<version>5.0.0</version>
				<executions>
					<execution>
						<id>generateRunners</id>
						<phase>generate-test-sources</phase>
						<goals>
							<goal>generateRunners</goal>
						</goals>
						<configuration>
							<!-- Mandatory -->
							<!-- List of package names to scan for glue code. -->
							<glue>
								<package>au.gov.border.oa.stepDefinitions</package>
							</glue>
							<parallelScheme>FEATURE</parallelScheme>
							<!--<parallelScheme>SCENARIO</parallelScheme>-->
							<customVmTemplate>src/test/resources/cucumber-serenity-runner.vm</customVmTemplate>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>2.3</version>
				<configuration>
					<descriptor>src/main/assembly/assembly.xml</descriptor>
				</configuration>
				<executions>
					<execution>
						<id>make-assembly</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
						<configuration>
							<archive>
								<manifest>
									<mainClass>au.gov.border.oa.Test</mainClass>
								</manifest>
							</archive>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>